# smart-water-api

./: pyproject.toml
app/: __init__.py
app/templates/: index.html
firmware/: api.ino
